# libbsocial

./: CMakeLists.txt  README.md
cmake/: libbsocial.pc.cmake
core/: CMakeLists.txt
core/cmake/: libbsocial.pc.cmake
core/include/: bsocial-ctx-priv.h  bsocial-ctx.h  bsocial-http-client.h  bsocial-httpclient.h  bsocial-json.h  bsocial-types-priv.h  bsocial-types.h  bsocial-url-priv.h  bsocial.h
core/src/: bsocial-ctx.c  bsocial-types.c
curl/: CMakeLists.txt
curl/cmake/: libbsocial-curl.pc.cmake
curl/include/: bsocial-curl.h
curl/src/: bsocial-curl.c
examples/: CMakeLists.txt  example1.c
include/: bsocial-ctx-priv.h  bsocial-ctx.h  bsocial-httpclient.h  bsocial-types-priv.h  bsocial-types.h  bsocial.h
jansson/: CMakeLists.txt
jansson/cmake/: libbsocial-jansson.pc.cmake
jansson/include/: bsocial-jansson.h
jansson/src/: bsocial-jansson.c
src/: bsocial-ctx.c  bsocial-types.c  bsocial-url.c
