file(GLOB LIBBSOCIAL_EXAMPLES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
foreach(LIBBSOCIAL_EXAMPLE ${LIBBSOCIAL_EXAMPLES})
	get_filename_component(LIBBSOCIAL_EXAMPLE_CMAKE_1  ${LIBBSOCIAL_EXAMPLE} NAME)
	string(REGEX REPLACE "\\.[^.]*$" "" LIBBSOCIAL_EXAMPLE_CMAKE ${LIBBSOCIAL_EXAMPLE_CMAKE_1})
	add_executable(${LIBBSOCIAL_EXAMPLE_CMAKE} ${LIBBSOCIAL_EXAMPLE})
	add_dependencies(${LIBBSOCIAL_EXAMPLE_CMAKE} libbsocialcurl libbsocialcore)
	target_link_libraries(${LIBBSOCIAL_EXAMPLE_CMAKE} PRIVATE libbsocialcore libbsocialcurl)
endforeach()	
